--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+                <img class="img-fluid" src="images/monster_maker.jpg" alt="">
             </div>
 
             <div class="col-md-4">
@@ -450,18 +450,18 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+                <img class="img-fluid" src="images/museum.jpg" alt="">
             </div>
 
             <div class="col-md-4">
                 <h3 class="my-3">Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3 class="my-3">Project Details</h3>
+                <p>The Museum Mock-Up page was my first Iron Yard assignment. The goal was to take a design and create a matching, functional and browser-responsive page.</p>
+                <h3 class="my-3">Skills Used</h3>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>HTML</li>
+                    <li>CSS/SCSS</li>
+                    <li>Responsive Media Queries</li>
+                    
                 </ul>
             </div>
 
@@ -483,15 +483,15 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-fluid" src="../website/images/tShirtScreenShot.png" alt="tshirtpage">
+                <img class="img-fluid" src="images/tailored_tees.jpg" alt="tshirtpage">
             </div>
 
             <div class="col-md-4">
-                <h3 class="my-3">Project Description</h3>
+                <h3 class="my-3"></h3>
                 <p>For this assignment, I was given a mockup of a webpage which included CSS animations on a select menu. </p>
-                <h3 class="my-3">Project Details</h3>
+                <h3 class="my-3">For my second assignment, I was asked to create a functional page based off of a mock-up. The main goal was to employ CSS animations when the user selects various T-shirt options, such as size and color. </h3>
                 <ul>
-                    <li>HTML</li>
+                    <li>HTML/CSS/SCSS</li>
                     <li>CSS Animations</li>
                     <li>Responsive Design</li>
                    
